--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -42,7 +42,7 @@
             <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/orders/Waiting" class="text-black">Waiting</a></li>
             <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/orders/Request_Cancel" class="text-black">Request Cancel</a></li>
             <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/ranks/Index" class="text-black">Ranks</a></li>
-            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/promocodes/Index" class="text-black">Prmocodes</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/promocodes/Index" class="text-black">Promo Codes</a></li>
             <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/User/Logout" class="text-black">Logout</a></li>
         </ul>
     </div>
